refactor!: remove deprecation from `_id` field
Support auto-generated id fields with `@Doc(generateId = true)`
annotation. Documents must either have an ID annotated field or the
above annotation-value set to `true` otherwise initialization of the
index with fail with a clear error indicating missing configuration.

Remove DocumentMapping.matchId which matches `_id` fields.
Introduce `Field` annotation and `defaultSortBy` flag.
Rely on `defaultSortBy` field first, then on `ID` field then on `_doc`
when sorting document by default in live scroll mode.